plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '6.0.0'
}

project.tasks.assemble.dependsOn project.tasks.shadowJar

version '1.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    compileOnly 'com.github.DV8FromTheWorld:JDA:5885efcc40d4087b93e142e84fb9aeb11d388dd1'
    implementation 'com.jagrosh:jda-utilities:3.0.5'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
}

compileJava.options.encoding = 'UTF-8'
